Fri Sep  9 19:19:22 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/PerlACE/ProcessAndroid.pm:
        * bin/PerlACE/TestTarget_Android.pm:
          Don't copy all config files, if we need files on a target, the test
          script should copy them

Fri Sep  9 19:15:28 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/PerlACE/TestTarget_Android.pm:
          Try to kill emulator and emulator-arm

Fri Sep  9 11:26:45 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

        * include/makeinclude/platform_android.GNU:
          Android doesn't have rwho

Fri Sep  9 07:19:00 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/CDR_Stream.h:
          Doxygen changes

        * include/makeinclude/platform_android.GNU:
          Prevent flags being listed twice

Thu Sep  8 17:48:53 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/OS_NS_stdlib.cpp:
          Fixed compile warnings

        * ace/OS_NS_Thread.inl:
          Added check for ACE_LACKS_CONDATTR

        * ace/Mem_Map.cpp:
          When ACE_MMAP_NO_ZERO is defined, when the length if zero we
          default to the pagesize

Thu Sep  8 17:46:28 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/config-android.h:
          Further cleanup and improvements

Thu Sep  8 17:32:48 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/TP_Reactor.h:
          Typo fixed

        * ace/Process_Manager.cpp:
          Layout changes

        * ace/config-sunos5.5.h:
          Removed old comment

        * ace/Signal.h:
          Doxygen cleanup

        * ace/OS_NS_errno.inl:
          Const changes

        * ace/OS_NS_errno.h:
          Only define ACE_ERRNO_TYPE when it is not defined yet, that way we
          can just set it in config-android.h

        * ace/config-android.h:
          Cleanup and set various defines needed to get correct runtime
          behavior

        * bin/PerlACE/Process_VMS.pm: